JEKT-176 Removed null fields from transform gem and updated timestamp format 🔁 Modified     - Pipeline        - JDE_01_MD_MATL_INV     - Dataset        - MD_MATL_INV

--- a/src/datasets/MD_MATL_INV/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_INV/pbt_aspects.yml
@@ -93,57 +93,8 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: BLCKD_STCK
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CRT_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: RTRNS
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: BASE_UOM_CD
     type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: STO_IN_TRNST_QTY
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PLNT_IN_TRNST_QTY
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: FISC_YR_OF_CUR_PER
-    type: integer
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CUR_PER
-    type: integer
     nullable: true
     metadata:
       description: ''
@@ -165,14 +116,14 @@ schema:
       tags: []
   - name: DAI_CRT_DTTM
     type: timestamp
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DAI_UPDT_DTTM
     type: timestamp
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
