JEKT-24 -  Modified - Changed the Config Parameter from l1_md_prophecy to be dev_md_l1 which will allow for migrating the code to QA and Production to update the TargetSchema     - Pipeline        - SAP_MD_SER_NUM_STOCK_SGMNT_ATL_BBA_BBL_BBN_MRS        - SAP_MD_SER_NUM_STOCK_SGMNT_HCS_MBP_P01_SVS

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -739,7 +739,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-03-13 20:16:19'
-    modifiedAt: '2023-03-27 22:03:35'
+    modifiedAt: '2023-03-29 13:45:07'
     datasets:
       inputs:
       - datasets/DS_SAP_EQBS_01
@@ -757,7 +757,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-03-13 21:12:56'
-    modifiedAt: '2023-03-27 21:37:49'
+    modifiedAt: '2023-03-29 13:44:14'
     datasets:
       inputs:
       - datasets/DS_SAP_EQBS_02
@@ -6099,6 +6099,6 @@ functions:
 subgraphs: {}
 sqlModels: {}
 sqlPipeline: null
-dependencies: '[]'
+dependencies: []
 projectDependencies: {}
 pipelineConfigurations: {}
