🔁 JEKT-215     - Dataset        - DS_SAP_01_T024        - DS_SAP_01_T024F        - DS_SAP_01_T024D        - DS_SAP_01_NSDM_V_MARC        - MD_MATL_LOC        - DS_SAP_01_T141T     - Pipeline        - SAP_01_MD_MATL_LOC

--- a/src/datasets/MD_MATL_LOC/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_LOC/pbt_aspects.yml
@@ -926,3 +926,10 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: '_deleted_   '
+    type: string
+    nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
