JEKT-186 🔁 Modified     - Pipeline        - JDE_MD_MATL_LOC_DEU        - SAP_MD_MATL_LOC_BBA_BBL_BBN_old        - SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN_old        - SAP_MD_MATL_LOC_BBA_BBL_BBN        - SAP_MD_MATL_LOC_TAI_MRS_P01_HCS_BWI_GEU_SVS_MBP_FSN     - Dataset        - DS_SAP_01_MARC        - MD_MATL_LOC

--- a/src/datasets/MD_MATL_LOC/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_LOC/pbt_aspects.yml
@@ -23,6 +23,20 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: VAR_CNTL_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: AUTO_PO_IND
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: PRCTR_CD
     type: string
     nullable: true
@@ -44,7 +58,49 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: QUAL_MGMT_CNTL_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: REORDR_QTY
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: COST_LOT_SIZE_VAL
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SERIZATION_PRFL_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: SPEC_MATL_PLNT_STS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SPEC_MATL_PLNT_STS_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DEL_IND
     type: string
     nullable: true
     metadata:
@@ -72,6 +128,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: PRDTN_UOM_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: MATL_ABC_CLSN_CD
     type: string
     nullable: true
@@ -80,6 +143,20 @@ schema:
       mappings: []
       tags: []
   - name: AVLBLTY_CHK_IND
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SFTY_TIME_IND
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SPL_PRCMT_TYPE_CD
     type: string
     nullable: true
     metadata:
@@ -128,6 +205,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: GOOD_RCPT_LEAD_DAYS_QTY
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: LOT_SIZE_MAX_QTY
     type: decimal(22,4)
     nullable: true
@@ -156,6 +240,34 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: MAX_STK_LVL_QTY
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SFTY_TIME_DAYS_CNT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PLAN_DELV_DAYS_CNT
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SCRAP_PCT
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: INHS_PRDTN_DAYS_CNT
     type: decimal(18,4)
     nullable: true
@@ -163,56 +275,35 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: PRCHSNG_GRP_CD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MSTR_PLNG_FMLY_CD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ENTR_PRCMT_TYPE_CD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: VALUT_CAT
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MRP_PRFL
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TOT_REPLN_LT
+  - name: MIN_SFTY_STK_QTY
     type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: CMMDTY_CD
+  - name: BKWRD_CNSMPTN_DAYS_CNT
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FRWD_CNSMPTN_DAYS_CNT
+    type: decimal(18,4)
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CNSMPTN_MODE_CD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: MRP_GRP
+  - name: PRCHSNG_GRP_CD
     type: string
     nullable: true
     metadata:
@@ -235,6 +326,41 @@ schema:
       tags: []
   - name: DAI_UPDT_DTTM
     type: timestamp
+    nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _l0_upt_
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _pk_
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _pk_md5_
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _l1_upt_
+    type: timestamp
+    nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _deleted_
+    type: string
     nullable: false
     metadata:
       description: ''
