JEKT-236 (Created Dataset) ❇️ New     - Dataset        - DS_SAP_01_NSDM_V_MARD
🔁 Modified
    - Pipeline
       - SAP_01_MD_MATL_INV

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -3,24 +3,56 @@ description: ''
 version: 0.0.1
 author: ypatel8@its.jnj.com
 language: python
-buildSystem: wheel
+buildSystem: ''
+buildSystemDetails:
+  artefactID: cdl_md_l1
+  parentArtefactID: cdl_l1_team
+  buildSystem: wheel
+  author: null
+  createdAt: '2023-03-24 13:00:44'
+  modifiedAt: '2023-03-24 13:00:44'
 pipelines:
   pipelines/SAP_01_MD_MATL_INV:
     name: SAP_01_MD_MATL_INV
     description: ''
     author: ypatel8@its.jnj.com
     mode: batch
+    artefactID: ''
     language: python
     createdAt: '2023-03-22 13:21:05'
-    modifiedAt: '2023-03-22 13:30:18'
+    modifiedAt: '2023-03-30 13:30:28'
     datasets:
-      inputs: []
+      inputs:
+      - datasets/DS_SAP_01_NSDM_V_MARD
       outputs: []
+    subgraphs: []
     dependencies: {}
-datasets: {}
+datasets:
+  datasets/DS_SAP_01_NSDM_V_MARD:
+    name: DS_SAP_01_NSDM_V_MARD
+    description: ''
+    author: ypatel8@its.jnj.com
+    createdAt: '2023-03-30 13:30:19'
+    modifiedAt: '2023-03-30 13:30:19'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: ypatel8@its.jnj.com
+        createdAt: '2023-03-30 13:30:19'
+        modifiedAt: '2023-03-30 13:30:19'
 templates: {}
 jobs: {}
-libraries: []
+functions:
+  author: null
+  createdAt: '2023-03-24 13:00:44'
+  modifiedAt: '2023-03-24 13:00:44'
+  gems: {}
+  udfs: {}
+  udafs: {}
+  expressions: {}
 subgraphs: {}
 sqlModels: {}
 sqlPipeline: null
