--- a/src/datasets/MD_MATL_LOC/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_LOC/pbt_aspects.yml
@@ -905,6 +905,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: _l1_upt_
+    type: timestamp
+    nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: _pk_
     type: string
     nullable: true
@@ -919,14 +926,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _l1_upt_
-    type: timestamp
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: '_deleted_   '
+  - name: _deleted_
     type: string
     nullable: false
     metadata:
