--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -20,10 +20,11 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-03-22 13:21:05'
-    modifiedAt: '2023-03-30 13:30:28'
+    modifiedAt: '2023-03-30 13:44:59'
     datasets:
       inputs:
       - datasets/DS_SAP_01_NSDM_V_MARD
+      - datasets/DS_SAP_01_NSDM_V_MCHB
       outputs: []
     subgraphs: []
     dependencies: {}
@@ -43,6 +44,21 @@ datasets:
         author: ypatel8@its.jnj.com
         createdAt: '2023-03-30 13:30:19'
         modifiedAt: '2023-03-30 13:30:19'
+  datasets/DS_SAP_01_NSDM_V_MCHB:
+    name: DS_SAP_01_NSDM_V_MCHB
+    description: ''
+    author: ypatel8@its.jnj.com
+    createdAt: '2023-03-30 13:44:55'
+    modifiedAt: '2023-03-30 13:44:55'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: ypatel8@its.jnj.com
+        createdAt: '2023-03-30 13:44:55'
+        modifiedAt: '2023-03-30 13:44:55'
 templates: {}
 jobs: {}
 functions:
