JEKT-236 (Created Datasets 3 and 4) ❇️ New     - Dataset        - DS_SAP_01_NSDM_V_MSKU        - DS_SAP_01_NSDM_V_MKOL
🔁 Modified
    - Pipeline
       - SAP_01_MD_MATL_INV

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -20,11 +20,13 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-03-22 13:21:05'
-    modifiedAt: '2023-03-30 13:44:59'
+    modifiedAt: '2023-03-30 13:56:30'
     datasets:
       inputs:
       - datasets/DS_SAP_01_NSDM_V_MARD
       - datasets/DS_SAP_01_NSDM_V_MCHB
+      - datasets/DS_SAP_01_NSDM_V_MKOL
+      - datasets/DS_SAP_01_NSDM_V_MSKU
       outputs: []
     subgraphs: []
     dependencies: {}
@@ -59,6 +61,36 @@ datasets:
         author: ypatel8@its.jnj.com
         createdAt: '2023-03-30 13:44:55'
         modifiedAt: '2023-03-30 13:44:55'
+  datasets/DS_SAP_01_NSDM_V_MSKU:
+    name: DS_SAP_01_NSDM_V_MSKU
+    description: ''
+    author: ypatel8@its.jnj.com
+    createdAt: '2023-03-30 13:50:42'
+    modifiedAt: '2023-03-30 13:50:42'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: ypatel8@its.jnj.com
+        createdAt: '2023-03-30 13:50:42'
+        modifiedAt: '2023-03-30 13:50:42'
+  datasets/DS_SAP_01_NSDM_V_MKOL:
+    name: DS_SAP_01_NSDM_V_MKOL
+    description: ''
+    author: ypatel8@its.jnj.com
+    createdAt: '2023-03-30 13:55:58'
+    modifiedAt: '2023-03-30 13:55:58'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: ypatel8@its.jnj.com
+        createdAt: '2023-03-30 13:55:58'
+        modifiedAt: '2023-03-30 13:55:58'
 templates: {}
 jobs: {}
 functions:
