--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -6051,6 +6051,31 @@ jobs:
     createdAt: '2023-03-21 18:50:06'
     modifiedAt: '2023-03-21 21:40:53'
     author: skostadi@its.jnj.com
+  jobs/JOB_MD_BILL_DOC_HDR:
+    name: JOB_MD_BILL_DOC_HDR
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_01_MD_BILL_DOC_HDR
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-03-30 16:54:04'
+    modifiedAt: '2023-03-30 16:56:57'
+    author: jcovezd1@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 12:57:11'
