--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -738,7 +738,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-03-20 11:50:56'
-    modifiedAt: '2023-03-30 14:18:58'
+    modifiedAt: '2023-03-30 16:25:35'
     datasets:
       inputs:
       - datasets/DS_SAP_01_NSDM_V_MARC
@@ -6051,6 +6051,31 @@ jobs:
     createdAt: '2023-03-21 18:50:06'
     modifiedAt: '2023-03-21 21:40:53'
     author: skostadi@its.jnj.com
+  jobs/JOB_MD_MATL_LOC:
+    name: JOB_MD_MATL_LOC
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_01_MD_MATL_LOC
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-03-30 16:55:13'
+    modifiedAt: '2023-03-30 16:57:08'
+    author: mbolado1@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 11:49:16'
