JEKT-236 (Created Lookup and Transforms) ❇️ New     - Dataset        - DS_SAP_01_MARA
❌ Deleted
    - Dataset
       - DS_SAP_01_NSDM_V_MKOL

🔁 Modified
    - Pipeline
       - SAP_01_MD_MATL_INV

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -20,12 +20,12 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-03-22 13:21:05'
-    modifiedAt: '2023-03-30 13:56:30'
+    modifiedAt: '2023-03-30 17:14:56'
     datasets:
       inputs:
+      - datasets/DS_SAP_01_MARA
       - datasets/DS_SAP_01_NSDM_V_MARD
       - datasets/DS_SAP_01_NSDM_V_MCHB
-      - datasets/DS_SAP_01_NSDM_V_MKOL
       - datasets/DS_SAP_01_NSDM_V_MSKU
       outputs: []
     subgraphs: []
@@ -76,12 +76,12 @@ datasets:
         author: ypatel8@its.jnj.com
         createdAt: '2023-03-30 13:50:42'
         modifiedAt: '2023-03-30 13:50:42'
-  datasets/DS_SAP_01_NSDM_V_MKOL:
-    name: DS_SAP_01_NSDM_V_MKOL
+  datasets/DS_SAP_01_MARA:
+    name: DS_SAP_01_MARA
     description: ''
     author: ypatel8@its.jnj.com
-    createdAt: '2023-03-30 13:55:58'
-    modifiedAt: '2023-03-30 13:55:58'
+    createdAt: '2023-03-30 17:04:28'
+    modifiedAt: '2023-03-30 17:04:28'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -89,8 +89,8 @@ datasets:
         datasetType: Database
         description: ''
         author: ypatel8@its.jnj.com
-        createdAt: '2023-03-30 13:55:58'
-        modifiedAt: '2023-03-30 13:55:58'
+        createdAt: '2023-03-30 17:04:28'
+        modifiedAt: '2023-03-30 17:04:28'
 templates: {}
 jobs: {}
 functions:
