JEKT-314 ❇️ New pipeline for BWI and TAI     - Pipeline        - SAP_MD_DELV_LINE_BWI_TAI

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -26,6 +26,20 @@ pipelines:
       outputs: []
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_DELV_LINE_BWI_TAI:
+    name: SAP_MD_DELV_LINE_BWI_TAI
+    description: ''
+    author: jcovezd1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-03-31 16:01:38'
+    modifiedAt: '2023-03-31 16:01:51'
+    datasets:
+      inputs: []
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets: {}
 templates: {}
 jobs: {}
