JEKT-314❇️ New pipeline for FSN_GEU_HCS_MRS_P01_SVS_ATL     - Pipeline        - SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -40,6 +40,20 @@ pipelines:
       outputs: []
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL:
+    name: SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL
+    description: ''
+    author: jcovezd1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-03-31 16:03:34'
+    modifiedAt: '2023-03-31 16:03:47'
+    datasets:
+      inputs: []
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets: {}
 templates: {}
 jobs: {}
