JEKT-314 ❇️ New pipeline for MBP     - Pipeline        - SAP_MD_DELV_LINE_MBP

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -54,6 +54,20 @@ pipelines:
       outputs: []
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_BILL_DELV_MBP:
+    name: SAP_MD_DELV_LINE_MBP
+    description: ''
+    author: jcovezd1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-03-31 16:05:27'
+    modifiedAt: '2023-03-31 16:07:42'
+    datasets:
+      inputs: []
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets: {}
 templates: {}
 jobs: {}
