--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -782,14 +782,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/JDE_01_MD_MATL_INV:
-    name: JDE_01_MD_MATL_INV
+    name: JDE_MD_MATL_INV_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
     description: 'JDE Systems for MD_MATL_INV '
     author: natkins7@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-03-20 08:44:36'
-    modifiedAt: '2023-03-30 13:39:41'
+    modifiedAt: '2023-03-31 16:27:53'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F4101
