JEKT-236 (Updated Transfrom1) 🔁 Modified     - Pipeline        - SAP_MD_MATL_INV_HM2

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -13,14 +13,14 @@ buildSystemDetails:
   modifiedAt: '2023-03-24 13:00:44'
 pipelines:
   pipelines/SAP_01_MD_MATL_INV:
-    name: SAP_01_MD_MATL_INV
+    name: SAP_MD_MATL_INV_HM2
     description: ''
     author: ypatel8@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-03-22 13:21:05'
-    modifiedAt: '2023-03-31 15:36:45'
+    modifiedAt: '2023-03-31 16:29:04'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MARA
