--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -798,14 +798,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/JDE_01_MD_PO_SCHED_LINE_DELV:
-    name: JDE_01_MD_PO_SCHED_LINE_DELV
-    description: JDE - JES , MD_PO_SCHED_LINE_DELV
+    name: JDE_01_MD_PO_SCHED_LINE_DELV_JES_JEM_JET_JSW_MTR_SJD_DEU
+    description: JDE_MD_PO_SCHED_LINE_DELV
     author: jcacere7@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-03-21 13:11:41'
-    modifiedAt: '2023-03-30 17:23:19'
+    modifiedAt: '2023-03-31 18:27:40'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F4311
@@ -6039,7 +6039,7 @@ datasets:
     description: ''
     author: jcacere7@its.jnj.com
     createdAt: '2023-03-21 13:23:05'
-    modifiedAt: '2023-03-21 19:58:06'
+    modifiedAt: '2023-03-31 14:45:15'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6054,7 +6054,7 @@ datasets:
     description: ''
     author: jcacere7@its.jnj.com
     createdAt: '2023-03-21 20:31:38'
-    modifiedAt: '2023-03-22 18:08:50'
+    modifiedAt: '2023-03-31 14:48:35'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6439,6 +6439,6 @@ functions:
 subgraphs: {}
 sqlModels: {}
 sqlPipeline: null
-dependencies: '[]'
+dependencies: []
 projectDependencies: {}
 pipelineConfigurations: {}
