JEKT-352 ❇️ New Dataset for LIPS     - Dataset        - DS_SAP_01_LIPS
🔁 Modified
    - Pipeline
       - SAP_MD_DELV_LINE_HM2

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -20,13 +20,29 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-03-31 18:26:24'
-    modifiedAt: '2023-03-31 18:31:42'
+    modifiedAt: '2023-03-31 18:43:45'
     datasets:
-      inputs: []
+      inputs:
+      - datasets/DS_SAP_01_LIPS
       outputs: []
     subgraphs: []
     dependencies: {}
-datasets: {}
+datasets:
+  datasets/DS_SAP_01_LIPS:
+    name: DS_SAP_01_LIPS
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-03-31 18:41:32'
+    modifiedAt: '2023-03-31 18:41:32'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-03-31 18:41:32'
+        modifiedAt: '2023-03-31 18:41:32'
 templates: {}
 jobs: {}
 functions:
