JEKT-352 ❇️ New datasets for all source tables     - Dataset        - DS_SAP_01_LIKP        - DS_SAP_01_TVM4T        - DS_SAP_01_VBAP        - DS_SAP_01_VBAK
🔁 Modified
    - Pipeline
       - SAP_MD_DELV_LINE_HM2

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -20,10 +20,14 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-03-31 18:26:24'
-    modifiedAt: '2023-03-31 18:43:45'
+    modifiedAt: '2023-03-31 18:54:35'
     datasets:
       inputs:
+      - datasets/DS_SAP_01_LIKP
       - datasets/DS_SAP_01_LIPS
+      - datasets/DS_SAP_01_TVM4T
+      - datasets/DS_SAP_01_VBAK
+      - datasets/DS_SAP_01_VBAP
       outputs: []
     subgraphs: []
     dependencies: {}
@@ -43,6 +47,66 @@ datasets:
         author: jcovezd1@its.jnj.com
         createdAt: '2023-03-31 18:41:32'
         modifiedAt: '2023-03-31 18:41:32'
+  datasets/DS_SAP_01_LIKP:
+    name: DS_SAP_01_LIKP
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-03-31 18:49:45'
+    modifiedAt: '2023-03-31 18:49:46'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-03-31 18:49:46'
+        modifiedAt: '2023-03-31 18:49:46'
+  datasets/DS_SAP_01_VBAK:
+    name: DS_SAP_01_VBAK
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-03-31 18:51:09'
+    modifiedAt: '2023-03-31 18:51:09'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-03-31 18:51:09'
+        modifiedAt: '2023-03-31 18:51:09'
+  datasets/DS_SAP_01_VBAP:
+    name: DS_SAP_01_VBAP
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-03-31 18:52:42'
+    modifiedAt: '2023-03-31 18:52:42'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-03-31 18:52:42'
+        modifiedAt: '2023-03-31 18:52:42'
+  datasets/DS_SAP_01_TVM4T:
+    name: DS_SAP_01_TVM4T
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-03-31 18:54:32'
+    modifiedAt: '2023-03-31 18:54:32'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-03-31 18:54:32'
+        modifiedAt: '2023-03-31 18:54:32'
 templates: {}
 jobs: {}
 functions:
