--- a/src/datasets/md_po_sched_line_delv_swap/pbt_aspects.yml
+++ b/src/datasets/md_po_sched_line_delv_swap/pbt_aspects.yml
@@ -142,3 +142,31 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: _l0_upt
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _l1_upt_
+    type: timestamp
+    nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: '_pk_   '
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _pk_md_
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
