JEKT-166 UNIT TEST 🔁 Modified     - Pipeline        - JDE_01_MD_PO_SCHED_LINE_DELV_JES_JEM_JET_JSW_MTR_SJD_DEU     - Dataset        - md_po_sched_line_delv_swap

--- a/src/datasets/md_po_sched_line_delv_swap/pbt_aspects.yml
+++ b/src/datasets/md_po_sched_line_delv_swap/pbt_aspects.yml
@@ -23,55 +23,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: DELV_SCHED_CNT_NBR
-    type: string
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DELV_DTTM
-    type: void
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SCHD_QTY
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: RECV_QTY
-    type: void
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: STK_TFR_RECV_QTY
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MRP_ADJ_QTY
-    type: void
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: STAT_DELV_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: ORDER_TYPE
     type: string
     nullable: true
@@ -93,78 +44,8 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: PREV_QTY
-    type: void
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CMT_DTTM
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CAT_OF_DELV_DT
-    type: void
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: BTCH_NUM
-    type: void
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DAI_ETL_ID
-    type: integer
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DAI_CRT_DTTM
-    type: date
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DAI_UPDT_DTTM
-    type: timestamp
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _l0_upt
-    type: timestamp
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: '_pk_   '
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _pk_md_
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _l1_upt_
-    type: timestamp
+  - name: PK_COUNT
+    type: long
     nullable: false
     metadata:
       description: ''
